<resources>
    <string name="app_name">SimpleWhiteboard</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="done">Done</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="brush_width">Brush Width</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="control_center">Control Center</string>
    <string name="clear">Clear</string>
    <string name="button_save">Button Save</string>
    <string name="image">Image</string>
    <string name="brush_width_visual_display">brush width visual display</string>

</resources>