<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.goodapps.simplewhiteboard.View.CanvasView
        android:layout_width="match_parent"
        android:id="@+id/canvasView"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_margin="4dp"
        android:backgroundTint="@color/green_200"
        android:contentDescription="@string/button_save"
        android:src="@drawable/ic_baseline_save_36" />

    <ImageButton

        android:id="@+id/btnOpenSaved"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        android:layout_toEndOf="@id/btnSave"
        android:backgroundTint="@color/yellow_200"
        android:contentDescription="@string/clear"
        android:src="@drawable/ic_baseline_folder_open_36" />

    <ImageButton
        android:id="@+id/btnOpenControls"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="4dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/control_center"
        android:src="@drawable/ic_baseline_open_in_full_36" />

    <ImageButton

        android:id="@+id/btnClearCanvas"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        android:layout_toStartOf="@id/btnOpenControls"
        android:backgroundTint="@color/red_200"
        android:contentDescription="@string/clear"
        android:src="@drawable/ic_baseline_clear_36" />

    <LinearLayout
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/btnOpenControls"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/btnBrushColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/brush"
            android:src="@drawable/ic_baseline_color_lens_36" />

        <ImageButton
            android:id="@+id/btnBrushWidth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/eraser"
            android:src="@drawable/ic_baseline_radio_button_checked_36" />

        <ImageButton
            android:id="@+id/btnEraserWidth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/brush_width"
            android:src="@drawable/ic_baseline_erase_portrait_36" />

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/undo"
            android:src="@drawable/ic_baseline_undo_36" />


        <ImageButton
            android:id="@+id/btnRedo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/redo"
            android:src="@drawable/ic_baseline_redo_36" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/pensRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/pen1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/radio_button_background"
            android:backgroundTint="@color/black"
            android:button="@color/transparent"
            android:checked="true" />


        <RadioButton
            android:id="@+id/eraser"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/radio_button_background_eraser"
            android:button="@color/transparent" />


    </RadioGroup>
</RelativeLayout>